# hnes

./: .gitignore  .stylish-haskell.yaml  .travis.yml  LICENSE  README.md  hnes.cabal  out.dot  roms.txt  run.sh  stack.yaml
app/: Main.hs
roms/: 1942.nes  DK.nes  Dr_Mario.nes  Example.nes  Excitebike.nes  MM.nes  MMC.txt  Slalom.NES  nestest.txt
roms/games/: FF.nes  FF2.nes  MG.nes  SMB3.nes  Zelda.NES  bf.nes  skydest.nes  spitfall.nes
roms/games/working/: Paperboy.nes  mermaid.nes  top-gun.nes
roms/ppu/: Scrolldemo.nes  bkg.nes
roms/tests/ppu/: SpriteTest.nes  SpriteTest.txt
src/: Cartridge.hs  Constants.hs  Emulator.hs  Log.hs  Main.hs  Mapper.hs  Monad.hs  Nes.hs  Opcode.hs  Util.hs
src/Emulator/: Address.hs  CPU.hs  Cartridge.hs  Constants.hs  Controller.hs  Mapper.hs  Monad.hs  Nes.hs  Opcode.hs  PPU.hs  Trace.hs  Util.hs
src/Emulator/CPU/: Execution.hs
src/Emulator/Mapper/: Mapper1.hs  Mapper2.hs  Mapper3.hs  Mapper7.hs
src/Emulator/PPU/: Execution.hs
src/Emulator/UI/: SDL.hs
src/Emulator2/: CPU.hs  Emulator.hs  Monad.hs  PPU.hs
test/: Spec.hs  SpecHelper.hs
test/Blargg/: Spec.hs
test/Nestest/: Parsing.hs  Spec.hs
