name:                hnes
version:             0.1.0.0
homepage:            https://github.com/githubuser/hnes#readme
license:             BSD3
license-file:        LICENSE
author:              Dominic Bou-Samra
copyright:           2017 Dominic Bou-Samra
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  exposed-modules:     Emulator
                     , Emulator.Nes
                     , Emulator.PPU
                     , Emulator.CPU
                     , Emulator.Cartridge
                     , Emulator.Monad
                     , Emulator.Opcode
                     , Emulator.Util
                     , Emulator.Trace
                     , Emulator.Controller
  default-extensions: Strict
  ghc-options:       -fno-warn-name-shadowing 
                    --  -fllvm -fforce-recomp
                     -O2
  build-depends:       base >= 4.7 && < 5
                     , mtl
                     , vector
                     , bytestring
                     , monad-loops
                     , random

  default-language:    Haskell2010

executable hnes
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  default-extensions: Strict
  ghc-options:        -O2 
  build-depends:       base >= 4.7 && < 5
                     , hnes
                     , mtl
                     , text
                     , vector
                     , bytestring
                     , sdl2

test-suite hnes-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Nestest.Parsing
                     , Nestest.Spec
                     , Blargg.Spec 
  build-depends:       base
                     , hnes
                     , bytestring
                     , parsec
                     , tasty
                     , tasty-hunit
  ghc-options:         -threaded
  default-language:    Haskell2010
  