name:                hnes
version:             0.1.0.0
homepage:            https://github.com/githubuser/hnes#readme
license:             BSD3
license-file:        LICENSE
author:              Dominic Bou-Samra
copyright:           2017 Dominic Bou-Samra
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  exposed-modules:     Emulator
                     , Emulator.Nes
                     , Emulator.PPU
                     , Emulator.CPU
                     , Emulator.Cartridge
                     , Emulator.Mapper
                     , Emulator.Mapper.Mapper2
                     , Emulator.Mapper.Mapper3
                     , Emulator.Mapper.Mapper7
                     , Emulator.Monad
                     , Emulator.Opcode
                     , Emulator.Util
                     , Emulator.Trace
                     , Emulator.Controller
  default-extensions: Strict
  ghc-options:       -fno-warn-name-shadowing 
                     -O2
                    --  -fllvm
                    --  -fforce-recomp
  build-depends:       base >= 4.7 && < 5
                     , mtl
                     , vector
                     , bytestring
                     , monad-loops
                     , containers


  default-language:    Haskell2010

executable hnes
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  default-extensions: Strict
  ghc-options:        -threaded
                      -O2
                      -- -fllvm 
                      -- -fforce-recomp
  build-depends:       base >= 4.7 && < 5
                     , hnes
                     , mtl
                     , text
                     , vector
                     , bytestring
                     , sdl2
                     , containers

test-suite hnes-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Nestest.Parsing
                     , Nestest.Spec
                     , Blargg.Spec 
  build-depends:       base
                     , hnes
                     , bytestring
                     , parsec
                     , tasty
                     , tasty-hunit
  ghc-options:         -threaded
  default-language:    Haskell2010
  